--- a/index.html
+++ b/index.html
@@ -18,17 +18,22 @@
     <div id="exercicio">
         <button>Adicionar Quadrado</button>
     </div>
-<hr>
+    <hr>
     <div id="app">
         <ul>
         </ul>
         <input type="text" placeholder="digite um todo">
         <button>Adicionar</button>
     </div>
-    <!-- <script src="todos.js"></script> -->
+    <hr>
+    <a href="index.html">Index</a>
+    <a href="ajax.html">Ajax</a>
+    <script src="js/todos.js"></script>
     <script src="js/lista-1.js"></script>
     <script src="js/lista-2.js"></script>
-    <script>
+    <script type="text/javascript">
+    </script>
+    <script type="text/javascript">
         let endereco = {
             rua: "Rua dos pinheiros",
             numero: 1293,
@@ -37,7 +42,7 @@
             uf: "SP"
         };
         let skills = ["Javascript", "ReactJS", "React Native"];
-        let anosEstudo = 0;
+        let anosEstudo = 10;
         let usuarios = [
             {
                 nome: "Diego",
