--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <hr>
     <a href="index.html">Index</a>
     <a href="ajax.html">Ajax</a>
+    <a href="exercicio-2.html">exercicio</a>
     <script src="js/todos.js"></script>
     <script src="js/lista-1.js"></script>
     <script src="js/lista-2.js"></script>
